--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ style="font-family:Roboto;
 font-style: normal;
 color: #2E2F42;">
 
-    <header class="page-header">
+<header class="page-header">
         <nav>
             <a  href="/" class="logo"> <span>Web</span> studio</a>
-        <ul class="site-nave list">
+            <ul class="site-nave list">
             <li class="site-nave current"><a href="./index.html" class="link">Studio</a></li>
             <li class="site-nave"><a href="" class="link">Portfolio</a></li>
             <li><a href="" class="link">Contacts</a></li>
@@ -24,10 +24,10 @@ color: #2E2F42;">
             <li> <a href="" class="link">info@devstudio.com</a></li>
             <li> <a href="" class="link">+11 (000) 111 11 11</a></li>
         </ul>
-    </header>
+</header>
     <main>
     <div>
-        <section>
+        <section class="hero-blok">
             <h1 class="hero">Effective Solutions for Your Business</h1>
             <a href="">Order Service</a>
         </section>
